Check for equal FFmpeg skills, remove /v1/version
